Init app configurations. Implement the API layer.
