# api/controllers/users.js
@@ -1,0 +1,12 @@
+'use strict';
+
+const util = require('util');
+const apiwrap = require('./apibase').apiwrap;
+
+module.exports = {
+  getAllUsers: apiwrap((req, res) => {
+    res.json(200, {
+      hello: 'world'
+    });
+  })
+};
